# public

./: .gitignore  LICENSE  README.md
agent-concepts/mixture-of-models/: README.md
agent-concepts/terraform-agent/: README.md
chatbot/: README.md  requirements.txt
chatbot/src/: async_chatbot.py
crypto-forecasting/: .env  README.md  requirements.txt
crypto-forecasting/resources/data/: ALGOUSDT_15m_20241216_20250214.csv  ALGOUSDT_1d_20240215_20250214.csv  ALGOUSDT_1h_20240215_20250214.csv  ALGOUSDT_4h_20240215_20250214.csv  BTCUSDT_15m_20241216_20250214.csv  BTCUSDT_1d_20240215_20250214.csv  BTCUSDT_1h_20240215_20250214.csv  BTCUSDT_4h_20240215_20250214.csv
crypto-forecasting/src/: main.py
crypto-forecasting/src/data_handling/: data_fetcher.py  data_validator.py  feature_creation.py
crypto-forecasting/src/forecasting/: nhits_forecast.py  result_plotting.py
crypto-forecasting/tests/data_handling/: test_data_validator.py  test_feature_creation.py
crypto-forecasting/tests/forecasting/: test_result_plotting.py
crypto-forecasting/tests/resources/: test_data_15m.csv  (+3 more)
inference-time-distillation/: README.md
inference-time-distillation/src/: benchmark.py  main.py  prompt.py
merkle-tree-api/: Cargo.toml  README.md  api-documentation.md
merkle-tree-api/src/: error.rs  main.rs  merklecore.rs  routes.rs  state.rs
model-router/: README.md  requirements.txt
model-router/data/: data.json  result.json
model-router/src/: data_eval.py  main.py  prompt.py
rag/: .env  README.md  requirements.txt
rag/src/: document_processing.py  lightRAG.py  qdrant.py
(+16 files in other folders)
