[package]
name = "merkl-tree-api"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
sha2 = "0.10.8"
hyper = { version = "1.6.0", features = ["full"] }

[dev-dependencies]
mime = "0.3.17"